attempt to fix table scrollbar

--- a/packages/itwinui-css/src/table/base.scss
+++ b/packages/itwinui-css/src/table/base.scss
@@ -17,13 +17,18 @@
 /// to make sure they are always aligned, even when body is not
 /// scrollable and even when it has sticky columns.
 @mixin table-scrollbar {
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-gutter: stable;
+
+  @supports not (scrollbar-gutter: stable) {
+    overflow-y: scroll;
+  }
 }
 
 @mixin iui-table-header-wrapper {
   @include table-scrollbar;
   overflow-x: hidden;
+  scrollbar-width: none;
   background-color: var(--iui-color-background);
   display: flex;
   flex-shrink: 0;
